# masterpassword

./: .pre-commit-config.yaml  README.md  pyproject.toml
masterpassword/: masterpassword.py
